[gd_scene load_steps=5 format=3 uid="uid://cr67iam8eh50"]

[ext_resource type="Script" uid="uid://dva16e3yatcqr" path="res://scenes/ui/inventory_backpack.gd" id="1_heq4d"]
[ext_resource type="FontFile" uid="uid://7msnx71lwvs4" path="res://assets/fonts/Kenney Blocks.ttf" id="1_nyf64"]
[ext_resource type="Texture2D" uid="uid://lv6hjhxgkvvp" path="res://scenes/ui/inventory_backpack.tres" id="3_ekutt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekutt"]
texture = ExtResource("3_ekutt")

[node name="InventoryBackpack" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_heq4d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_right = 48.0
offset_bottom = 28.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_nyf64")
text = "BACKPACK"

[node name="SlotsContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="SlotTemplate" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(24, 24)
anchors_preset = 0
offset_right = 24.0
offset_bottom = 24.0

[node name="Panel" type="Panel" parent="SlotTemplate"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -48.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekutt")

[node name="CenterContainer" type="CenterContainer" parent="SlotTemplate/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SlotTemplate/Panel/CenterContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="SlotTemplate/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 24.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("1_nyf64")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 2
vertical_alignment = 2
